Fixed Bug with overflow: auto for body

--- a/src/sass/settings/_base.sass
+++ b/src/sass/settings/_base.sass
@@ -5,8 +5,10 @@
 // Preset
 
 html
+  height: 100%
   font-size: $root--font-size
 body
+  height: 100%
   font-family: $font-family
   font-weight: 400
   font-size: rem(18px, $root--font-size)
@@ -37,5 +39,6 @@ li
   list-style: none
 
 .page-wrapper
+  height: 100%
   transition: .7s
   height: 100vh
